align entity with OIDF Specification
